--- a/forum/package.json
+++ b/forum/package.json
@@ -12,12 +12,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dayjs": "^1.11.10",
+    "dompurify": "^3.0.8",
+    "easymde": "^2.18.0",
     "formik": "^2.4.5",
+    "katex": "^0.16.9",
+    "marked": "^11.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-simplemde-editor": "^5.2.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.3"
   },
