--- a/forum/package.json
+++ b/forum/package.json
@@ -52,6 +52,7 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^3.2.4"
+    "prettier": "^3.2.4",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0"
   }
 }
