--- a/forum/package.json
+++ b/forum/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
     "dayjs": "^1.11.10",
     "dompurify": "^3.0.8",
     "easymde": "^2.18.0",
@@ -52,7 +53,7 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^3.2.4",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.0"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
+    "prettier": "^3.2.4"
   }
 }
