--- a/forum/package.json
+++ b/forum/package.json
@@ -16,6 +16,7 @@
     "dompurify": "^3.0.8",
     "easymde": "^2.18.0",
     "formik": "^2.4.5",
+    "jwt-decode": "^4.0.0",
     "katex": "^0.16.9",
     "marked": "^11.2.0",
     "prop-types": "^15.8.1",
